# onefinancial-backend

./: .env  Cargo.toml
migrations/: 20250326151950_create_tables.sql  20250327215411_create_user_watchList_habit_progress.down.sql  20250327215411_create_user_watchList_habit_progress.up.sql
src/: main.rs
src/config/: db_connection.rs  setting.rs
