[package]
name = "onefinancial-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"        # Web framework
serde = { version = "1", features = ["derive"] }  # JSON serialization
tokio = { version = "1", features = ["full"] }    # Async runtime
dotenvy = "0.15"       # Environment variable management
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls"] }  # PostgreSQL ORM

